--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <li class="process-box">
                         <a href="#">
                             <img src="images/improvment-1.png">
-                            <h4>Continue Improvement</h4>
+                            <h4>Continuous Improvements</h4>
                             <p>Deployment of the complete product ensuring that it matches the current development standards.</p>
                         </a>
                     </li>
@@ -184,7 +184,7 @@
                                     <img src="images/review-img.png">
                                 </div>
                                 <div class="review-right">
-                                    <h5>Barnes Barnes</h5>
+                                    <h5>Barnes</h5>
                                     <!-- <h6>Developer</h6> -->
                                 </div>
                             </div>
@@ -237,7 +237,7 @@
             <div class="wrapper">
                 <div class="content-head">
                     <h2 class="cmn-heading">Get in touch!</h2>
-                    <P>Interested in working with QodeTeam ? <br> We would love to talk to you about your next software project.</P>
+                    <P>Interested in working with QodeTeam ? <br> We would love to talk to you about your next intresting project.</P>
                 </div>
                 <div class="contact-descrption">
                     <div class="contact-left">
