--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="wrapper">
                 <div class="banner-descrption">
                     <div class="banner-left">
-                        <h2>We craft <b>advanced</b> digital products.</h2>
+                        <h2>We Craft <b>ADVANCED</b> Digital Products.</h2>
                         <p>Build your world-class digital products with our team of experienced developers and strategy experts.</p>
                         <a href="#contact-id" class="cmn-btn">Get started</a>
                     </div>
@@ -73,7 +73,7 @@
             <div class="wrapper">
                 <div class="content-head">
                     <h2 class="cmn-heading">Our Services</h2>
-                    <P>Top Notch Data Science and software development Company. From the development of your model solution to its deployment you can completely rely on us. Personalize your customer experience, automate your processes, and change the way customers interact with your product. </P>
+                    <P>Top Notch Data Science and Web & Mobile Application Development Company. From the development of your model solution to its deployment you can completely rely on us. Personalize your customer experience, automate your processes, and change the way customers interact with your product. </P>
                 </div>
                <div class="services-descrption">
                     <ul class="service-boxes">
@@ -129,7 +129,7 @@
                 <div class="banner-descrption">
                     <div class="banner-left">
                         <h2>Who <b>We</b> Are</h2>
-                        <p class="mar-bottom">Qode Team builds digital products that create values.We are data Science and web & mobile application development firm.We provide services using the latest technologies.We guide you through our proven product strategy process, leveraging our experience and best practices to help define your objectives, apply vigorous research of your business and market, determine your core concept and ensure a valid product structure. We build your product roadmap to ensure your vision has a clear road to success.</p>
+                        <p class="mar-bottom">Qode Team builds digital products that create values. We are Data Science and Web & Mobile Application Development firm. We provide services using the latest technologies. We guide you through our proven product strategy process, leveraging our experience and best practices to help define your objectives, apply vigorous research of your business and market, determine your core concept and ensure a valid product structure. We build your product roadmap to ensure your vision has a clear road to success.</p>
                         <p>Blending years of extraordinary experience and power of amazing collaboration to overcome business challenges with industry-wide, advanced, and quality services from consulting to deployments.</p>
                         <a href="#contact-id" class="cmn-btn">Get in touch</a>
                     </div>
@@ -156,7 +156,7 @@
                         <a href="#">
                             <img src="images/design-develop.png">
                             <h4>Design, Develop, <br> Test & Deploy</h4>
-                            <p>Designing and development of your product and Testing of the complete product is done in this phase.</p>
+                            <p>Designing and development of your product and testing of the complete product is done in this phase.</p>
                         </a>
                     </li>
                     <li class="process-box">
@@ -237,7 +237,7 @@
             <div class="wrapper">
                 <div class="content-head">
                     <h2 class="cmn-heading">Get in touch!</h2>
-                    <P>Interested in working with QodeTeam ? <br> We would love to talk to you about your next intresting project.</P>
+                    <P>Interested in working with QodeTeam? <br> We would love to talk to you about your next intresting project.</P>
                 </div>
                 <div class="contact-descrption">
                     <div class="contact-left">
