--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
                             <a href="#" class="dark-pink">
                                 <img src="images/datascience-1.png">
                                 <h4>Data Science</h4>
-                                <p>we help our clients extract valuable business insights from their data to better understand their audience, forecast demand, reduce risks, prevent cost overruns, and much more.</p>
+                                <p>We help our clients extract valuable business insights from their data to better understand their audience, forecast demand, reduce risks, prevent cost overruns, and much more.</p>
                             </a>
                         </li>
                         <li class="service-box">
                             <a href="#" class="green">
                                 <img src="images/machin-learning.png">
                                 <h4>Machine Learning</h4>
-                                <p>With the assistance of artificial intelligence and machine learning we transform scattered, random data into valuable insight. We possess the expertise that drives powerful AI solutions.</p>
+                                <p>With the assistance of Artificial Intelligence and Machine Learning we transform scattered, random data into valuable insight. We possess the expertise that drives powerful AI solutions.</p>
                             </a>
                         </li>
                     </ul>
